Fix select background on Safari

--- a/components/questions/allQuestions/allQuestions.scss
+++ b/components/questions/allQuestions/allQuestions.scss
@@ -21,6 +21,7 @@
     border: none;
     cursor: pointer;
     padding: 4px 25px 4px 4px;
+    background-color: white;
     background-image: url(/static/images/select.svg);
     background-size: 12px 6px;
     background-repeat: no-repeat;
